--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -1,18 +1,22 @@
 site.title=GANGNEUNG COFFEE CITY
+site.language.korean=korean
+site.language.english=english
+site.language.chinese=chinese
 site.list.top=GangNeung Coffee
 site.list.loginJoin=Login/Join
 site.list.toMain=Main
 site.list.storeList=Store List
 site.main.title=GangNeung Coffee City
 site.main.subTitle=Start You're Coffee Life In GangNeung
-site.main.previous = Previous
-site.main.next = Next
-site.main.imgTitle1 = cool discreet beach
-site.main.imgTitle2 = A cup of warm coffee
-site.main.imgTitle3 = For you
-site.main.imgTitle4 = Gangneung Coffee
-site.main.imgSubTitle1 = with good beans
-site.main.imgSubTitle2 = Matching the Winter Olympics
-site.main.imgSubTitle3 = Different from the franchise
-site.main.imgSubTitle4 = You can visit anywhere
+site.main.previous=Previous
+site.main.next=Next
+site.main.imgTitle1=cool discreet beach
+site.main.imgTitle2=A cup of warm coffee
+site.main.imgTitle3=For you
+site.main.imgTitle4=Gangneung Coffee
+site.main.imgSubTitle1=with good beans
+site.main.imgSubTitle2=Matching the Winter Olympics
+site.main.imgSubTitle3=Different from the franchise
+site.main.imgSubTitle4=You can visit anywhere
 site.storeList.title=Your Best Friend
+site.footer.teamName=Fresh Team
