--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -1,4 +1,7 @@
 site.title=강릉커피도시
+site.language.korean=한국어
+site.language.english=영어
+site.language.chinese=중국어
 site.list.top=강릉 커피 거리
 site.list.loginJoin=로그인/회원가입
 site.list.toMain=메인으로
@@ -16,3 +19,4 @@ site.main.imgSubTitle2=동계 올림픽과 어울리는
 site.main.imgSubTitle3=프렌차이즈와는 차별되는
 site.main.imgSubTitle4=어디를 방문해도 좋은
 site.storeList.title=당신을 위한 커피숍
+site.footer.teamName=상큼하조
