--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -1,18 +1,22 @@
 site.title=\u6C5F\u9675\u5496\u5561
+site.language.korean=\u97E9\u8BED
+site.language.english=\u82F1\u8BED
+site.language.chinese=\u4E2D\u56FD\u8BED
 site.list.top=\u6C5F\u9675\u5496\u5561\u8857
 site.list.loginJoin=\u767B\u5F55/\u6CE8\u518C
 site.list.toMain=\u56DE\u5230\u9876\u7AEF
 site.list.storeList=\u5546\u5E97\u5217\u8868
 site.main.title=\u6C5F\u9675\u5496\u5561
 site.main.subTitle=\u50CF\u4F60\u751F\u6D3B\u7684\u6C5F\u9675\u5496\u5561\u57CE
-site.main.previous =\u4E0A\u4E00\u4E2A
-site.main.next =\u4E0B\u4E00\u6B65
-site.main.imgTitle1 =\u9177\u8C28\u614E\u7684\u6D77\u6EE9
-site.main.imgTitle2 =\u4E00\u676F\u6E29\u6696\u7684\u5496\u5561
-site.main.imgTitle3 =\u4E3A\u4F60
-site.main.imgTitle4 =\u6C5F\u9675\u5496\u5561
-site.main.imgSubTitle1 =\u6709\u597D\u8C46\u5B50
-site.main.imgSubTitle2 =\u5339\u914D\u51AC\u5B63\u5965\u8FD0
-site.main.imgSubTitle3 =\u4E0D\u540C\u4E8E\u7279\u8BB8\u7ECF\u8425
-site.main.imgSubTitle4 =\u4F60\u53EF\u4EE5\u5230\u4EFB\u4F55\u5730\u65B9\u8BBF\u95EE
+site.main.previous=\u4E0A\u4E00\u4E2A
+site.main.next=\u4E0B\u4E00\u6B65
+site.main.imgTitle1=\u9177\u8C28\u614E\u7684\u6D77\u6EE9
+site.main.imgTitle2=\u4E00\u676F\u6E29\u6696\u7684\u5496\u5561
+site.main.imgTitle3=\u4E3A\u4F60
+site.main.imgTitle4=\u6C5F\u9675\u5496\u5561
+site.main.imgSubTitle1=\u6709\u597D\u8C46\u5B50
+site.main.imgSubTitle2=\u5339\u914D\u51AC\u5B63\u5965\u8FD0
+site.main.imgSubTitle3=\u4E0D\u540C\u4E8E\u7279\u8BB8\u7ECF\u8425
+site.main.imgSubTitle4=\u4F60\u53EF\u4EE5\u5230\u4EFB\u4F55\u5730\u65B9\u8BBF\u95EE
 site.storeList.title=\u5496\u5561\u5E97\u7ED9\u4F60
+site.footer.teamName=\u6E05\u723D\u56E2\u961F
