--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -4,6 +4,8 @@ site.language.english=english
 site.language.chinese=chinese
 site.list.top=GangNeung Coffee
 site.list.loginJoin=Login/Join
+site.list.logout=Logout
+site.list.update=Edit Information
 site.list.toMain=Main
 site.list.storeList=Store List
 site.main.title=GangNeung Coffee City
@@ -20,3 +22,8 @@ site.main.imgSubTitle3=Different from the franchise
 site.main.imgSubTitle4=You can visit anywhere
 site.storeList.title=Your Best Friend
 site.footer.teamName=Fresh Team
+site.member.login=Login
+site.member.email=email
+site.member.emailPlaceHolder=Enter the email
+site.member.password=password
+site.member.passwordPlaceHolder=Enter password
