--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -1,22 +1,29 @@
-site.title=강릉커피도시
-site.language.korean=한국어
-site.language.english=영어
-site.language.chinese=중국어
-site.list.top=강릉 커피 거리
-site.list.loginJoin=로그인/회원가입
-site.list.toMain=메인으로
-site.list.storeList=스토어 목록
-site.main.title=강릉 커피 도시
-site.main.subTitle=당신 삶과 같은 강릉 커피도시
-site.main.previous=이전
-site.main.next=다음
-site.main.imgTitle1=시원한 안목 해변
-site.main.imgTitle2=따뜻한 커피 한잔
-site.main.imgTitle3=당신을 위한
-site.main.imgTitle4=강릉 커피
-site.main.imgSubTitle1=좋은 원두와 함께하는
-site.main.imgSubTitle2=동계 올림픽과 어울리는
-site.main.imgSubTitle3=프렌차이즈와는 차별되는
-site.main.imgSubTitle4=어디를 방문해도 좋은
-site.storeList.title=당신을 위한 커피숍
-site.footer.teamName=상큼하조
+site.title=\uAC15\uB989\uCEE4\uD53C\uB3C4\uC2DC
+site.language.korean=\uD55C\uAD6D\uC5B4
+site.language.english=\uC601\uC5B4
+site.language.chinese=\uC911\uAD6D\uC5B4
+site.list.top=\uAC15\uB989 \uCEE4\uD53C \uAC70\uB9AC
+site.list.loginJoin=\uB85C\uADF8\uC778/\uD68C\uC6D0\uAC00\uC785
+site.list.logout=\uB85C\uADF8\uC544\uC6C3
+site.list.update=\uC815\uBCF4\uC218\uC815
+site.list.toMain=\uBA54\uC778\uC73C\uB85C
+site.list.storeList=\uC2A4\uD1A0\uC5B4 \uBAA9\uB85D
+site.main.title=\uAC15\uB989 \uCEE4\uD53C \uB3C4\uC2DC
+site.main.subTitle=\uB2F9\uC2E0 \uC0B6\uACFC \uAC19\uC740 \uAC15\uB989 \uCEE4\uD53C\uB3C4\uC2DC
+site.main.previous=\uC774\uC804
+site.main.next=\uB2E4\uC74C
+site.main.imgTitle1=\uC2DC\uC6D0\uD55C \uC548\uBAA9 \uD574\uBCC0
+site.main.imgTitle2=\uB530\uB73B\uD55C \uCEE4\uD53C \uD55C\uC794
+site.main.imgTitle3=\uB2F9\uC2E0\uC744 \uC704\uD55C
+site.main.imgTitle4=\uAC15\uB989 \uCEE4\uD53C
+site.main.imgSubTitle1=\uC88B\uC740 \uC6D0\uB450\uC640 \uD568\uAED8\uD558\uB294
+site.main.imgSubTitle2=\uB3D9\uACC4 \uC62C\uB9BC\uD53D\uACFC \uC5B4\uC6B8\uB9AC\uB294
+site.main.imgSubTitle3=\uD504\uB80C\uCC28\uC774\uC988\uC640\uB294 \uCC28\uBCC4\uB418\uB294
+site.main.imgSubTitle4=\uC5B4\uB514\uB97C \uBC29\uBB38\uD574\uB3C4 \uC88B\uC740
+site.storeList.title=\uB2F9\uC2E0\uC744 \uC704\uD55C \uCEE4\uD53C\uC20D
+site.footer.teamName=\uC0C1\uD07C\uD558\uC870
+site.member.login=\uB85C\uADF8\uC778
+site.member.email=\uC774\uBA54\uC77C
+site.member.emailPlaceHolder=\uC774\uBA54\uC77C\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
+site.member.password=\uBE44\uBC00\uBC88\uD638
+site.member.passwordPlaceHolder=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
