--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -4,6 +4,8 @@ site.language.english=\u82F1\u8BED
 site.language.chinese=\u4E2D\u56FD\u8BED
 site.list.top=\u6C5F\u9675\u5496\u5561\u8857
 site.list.loginJoin=\u767B\u5F55/\u6CE8\u518C
+site.list.logout=\u9000\u51FA
+site.list.update=\u7F16\u8F91\u4FE1\u606F
 site.list.toMain=\u56DE\u5230\u9876\u7AEF
 site.list.storeList=\u5546\u5E97\u5217\u8868
 site.main.title=\u6C5F\u9675\u5496\u5561
@@ -20,3 +22,8 @@ site.main.imgSubTitle3=\u4E0D\u540C\u4E8E\u7279\u8BB8\u7ECF\u8425
 site.main.imgSubTitle4=\u4F60\u53EF\u4EE5\u5230\u4EFB\u4F55\u5730\u65B9\u8BBF\u95EE
 site.storeList.title=\u5496\u5561\u5E97\u7ED9\u4F60
 site.footer.teamName=\u6E05\u723D\u56E2\u961F
+site.member.login=\u767B\u5F55
+site.member.email=\u7535\u90AE
+site.member.emailPlaceHolder=\u8F93\u5165\u7535\u90AE
+site.member.password=\u5BC6\u7801
+site.member.passwordPlaceHolder=\u8F93\u5165\u5BC6\u7801
