--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -27,3 +27,15 @@ site.member.email=email
 site.member.emailPlaceHolder=Enter the email
 site.member.password=password
 site.member.passwordPlaceHolder=Enter password
+site.member.join=Join
+site.member.repassword=Reconfirm password
+site.member.nation=Nation
+site.member.language=Language
+site.member.name=Name
+site.member.cellphone=CellPhone
+site.member.gender=Gender
+site.member.man=Male
+site.member.woman=Female
+site.member.birthday=BirthDay
+site.member.profileimg=Profile Image
+site.member.siteAdmin=Site Administration
