--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -27,3 +27,15 @@ site.member.email=\uC774\uBA54\uC77C
 site.member.emailPlaceHolder=\uC774\uBA54\uC77C\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 site.member.password=\uBE44\uBC00\uBC88\uD638
 site.member.passwordPlaceHolder=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+site.member.join=\uD68C\uC6D0\uAC00\uC785
+site.member.repassword=\uBE44\uBC00\uBC88\uD638 \uC7AC\uD655\uC778
+site.member.nation=\uAD6D\uAC00
+site.member.language=\uC5B8\uC5B4
+site.member.name=\uC774\uB984
+site.member.cellphone=\uD734\uB300\uD3F0
+site.member.gender=\uC131\uBCC4
+site.member.man=\uB0A8
+site.member.woman=\uC5EC
+site.member.birthday=\uC0DD\uC77C
+site.member.profileimg=\uD504\uB85C\uD544 \uC0AC\uC9C4
+site.member.siteAdmin=\uC0AC\uC774\uD2B8 \uAD00\uB9AC
