--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -27,3 +27,15 @@ site.member.email=\u7535\u90AE
 site.member.emailPlaceHolder=\u8F93\u5165\u7535\u90AE
 site.member.password=\u5BC6\u7801
 site.member.passwordPlaceHolder=\u8F93\u5165\u5BC6\u7801
+site.member.join=\u62A5\u540D
+site.member.repassword=\u91CD\u65B0\u786E\u8BA4\u5BC6\u7801
+site.member.nation=\u56FD\u5BB6
+site.member.language=\u8BED\u8A00
+site.member.name=\u540D\u79F0
+site.member.cellphone=\u624B\u673A
+site.member.gender=\u6027\u522B
+site.member.man=\u7537
+site.member.Woman=\uF981
+site.member.birthday=\u751F\u65E5
+site.member.profileimg=\u6863\u6848\u56FE\u50CF
+site.member.siteAdmin=\u7F51\u7AD9\u7BA1\u7406
