--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -39,3 +39,4 @@ site.member.woman=\uC5EC
 site.member.birthday=\uC0DD\uC77C
 site.member.profileimg=\uD504\uB85C\uD544 \uC0AC\uC9C4
 site.member.siteAdmin=\uC0AC\uC774\uD2B8 \uAD00\uB9AC
+site.favorite.favorite=\uC990\uACA8\uCC3E\uAE30
