--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -39,3 +39,4 @@ site.member.woman=Female
 site.member.birthday=BirthDay
 site.member.profileimg=Profile Image
 site.member.siteAdmin=Site Administration
+site.favorite.favorite=Favorites
