--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -40,3 +40,5 @@ site.member.birthday=BirthDay
 site.member.profileimg=Profile Image
 site.member.siteAdmin=Site Administration
 site.favorite.favorite=Favorites
+site.store.storeRating=Coffee Shop Reviews
+site.product.productRating=Product Reviews
