--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -40,3 +40,5 @@ site.member.birthday=\uC0DD\uC77C
 site.member.profileimg=\uD504\uB85C\uD544 \uC0AC\uC9C4
 site.member.siteAdmin=\uC0AC\uC774\uD2B8 \uAD00\uB9AC
 site.favorite.favorite=\uC990\uACA8\uCC3E\uAE30
+site.store.storeRating=\uCEE4\uD53C\uC20D \uB9AC\uBDF0
+site.product.productRating=\uC81C\uD488 \uB9AC\uBDF0
