--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -40,3 +40,5 @@ site.member.birthday=\u751F\u65E5
 site.member.profileimg=\u6863\u6848\u56FE\u50CF
 site.member.siteAdmin=\u7F51\u7AD9\u7BA1\u7406
 site.favorite.favorite=\u6700\u7231
+site.store.storeRating=\u5496\u5561\u5E97\u8BC4\u8BBA
+site.product.productRating=\u4EA7\u54C1\u8BC4\u8BBA
