--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -42,3 +42,4 @@ site.member.siteAdmin=Site Administration
 site.favorite.favorite=Favorites
 site.store.storeRating=Coffee Shop Reviews
 site.product.productRating=Product Reviews
+site.list.add=Add
