--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -42,3 +42,4 @@ site.member.siteAdmin=\uC0AC\uC774\uD2B8 \uAD00\uB9AC
 site.favorite.favorite=\uC990\uACA8\uCC3E\uAE30
 site.store.storeRating=\uCEE4\uD53C\uC20D \uB9AC\uBDF0
 site.product.productRating=\uC81C\uD488 \uB9AC\uBDF0
+site.list.add=\uCD94\uAC00
