--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -42,3 +42,4 @@ site.member.siteAdmin=\u7F51\u7AD9\u7BA1\u7406
 site.favorite.favorite=\u6700\u7231
 site.store.storeRating=\u5496\u5561\u5E97\u8BC4\u8BBA
 site.product.productRating=\u4EA7\u54C1\u8BC4\u8BBA
+site.list.add=\u52A0
