--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -20,6 +20,7 @@ site.main.imgSubTitle1=\uC88B\uC740 \uC6D0\uB450\uC640 \uD568\uAED8\uD558\uB294
 site.main.imgSubTitle2=\uB3D9\uACC4 \uC62C\uB9BC\uD53D\uACFC \uC5B4\uC6B8\uB9AC\uB294
 site.main.imgSubTitle3=\uD504\uB80C\uCC28\uC774\uC988\uC640\uB294 \uCC28\uBCC4\uB418\uB294
 site.main.imgSubTitle4=\uC5B4\uB514\uB97C \uBC29\uBB38\uD574\uB3C4 \uC88B\uC740
+site.main.bestFriend=\uB2F9\uC2E0\uC758 \uCE5C\uD55C \uCE5C\uAD6C
 site.storeList.title=\uB2F9\uC2E0\uC744 \uC704\uD55C \uCEE4\uD53C\uC20D
 site.footer.teamName=\uC0C1\uD07C\uD558\uC870
 site.member.login=\uB85C\uADF8\uC778
