--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -20,6 +20,7 @@ site.main.imgSubTitle1=with good beans
 site.main.imgSubTitle2=Matching the Winter Olympics
 site.main.imgSubTitle3=Different from the franchise
 site.main.imgSubTitle4=You can visit anywhere
+site.main.bestFriend=You're Best Friend
 site.storeList.title=Your Best Friend
 site.footer.teamName=Fresh Team
 site.member.login=Login
