--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -20,6 +20,7 @@ site.main.imgSubTitle1=\u6709\u597D\u8C46\u5B50
 site.main.imgSubTitle2=\u5339\u914D\u51AC\u5B63\u5965\u8FD0
 site.main.imgSubTitle3=\u4E0D\u540C\u4E8E\u7279\u8BB8\u7ECF\u8425
 site.main.imgSubTitle4=\u4F60\u53EF\u4EE5\u5230\u4EFB\u4F55\u5730\u65B9\u8BBF\u95EE
+site.main.bestFriend=\u4F60\u662F\u6700\u597D\u7684\u670B\u53CB
 site.storeList.title=\u5496\u5561\u5E97\u7ED9\u4F60
 site.footer.teamName=\u6E05\u723D\u56E2\u961F
 site.member.login=\u767B\u5F55
