--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -8,6 +8,8 @@ site.list.logout=Logout
 site.list.update=Edit Information
 site.list.toMain=Main
 site.list.storeList=Store List
+site.list.productSearch=product search
+site.list.search=search
 site.main.title=GangNeung Coffee City
 site.main.subTitle=Start You're Coffee Life In GangNeung
 site.main.previous=Previous
