--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -8,6 +8,8 @@ site.list.logout=\uB85C\uADF8\uC544\uC6C3
 site.list.update=\uC815\uBCF4\uC218\uC815
 site.list.toMain=\uBA54\uC778\uC73C\uB85C
 site.list.storeList=\uC2A4\uD1A0\uC5B4 \uBAA9\uB85D
+site.list.productSearch=\uC74C\uB8CC \uC774\uB984
+site.list.search=\uAC80\uC0C9
 site.main.title=\uAC15\uB989 \uCEE4\uD53C \uB3C4\uC2DC
 site.main.subTitle=\uB2F9\uC2E0 \uC0B6\uACFC \uAC19\uC740 \uAC15\uB989 \uCEE4\uD53C\uB3C4\uC2DC
 site.main.previous=\uC774\uC804
