--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -46,3 +46,15 @@ site.favorite.favorite=Favorites
 site.store.storeRating=Coffee Shop Reviews
 site.product.productRating=Product Reviews
 site.list.add=Add
+member.update.passwordBefore=Before PassWord
+member.update.passwordBeforePlaceHolder=Enter Before Password
+member.update.password=Update PassWord
+member.update.passwordPlaceHolder=Enter Update Password
+member.update.passwordRePlaceHolder=Reconfirm Update Password
+member.update.nation=Update Nation
+member.update.language=Update Language
+member.update.name=Update Name
+member.update.cellphone=Update Cellphone
+member.delete.self=Member Secession
+member.update.result=Change
+memeber.update.reset=Reset
