--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -46,3 +46,15 @@ site.favorite.favorite=\uC990\uACA8\uCC3E\uAE30
 site.store.storeRating=\uCEE4\uD53C\uC20D \uB9AC\uBDF0
 site.product.productRating=\uC81C\uD488 \uB9AC\uBDF0
 site.list.add=\uCD94\uAC00
+member.update.passwordBefore=\uAE30\uC874 \uBE44\uBC00\uBC88\uD638
+member.update.passwordBeforePlaceHolder=\uAE30\uC874 \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+member.update.password=\uBCC0\uACBD\uD560 \uBE44\uBC00\uBC88\uD638
+member.update.passwordPlaceHolder=\uC0C8\uB85C\uC6B4 \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+member.update.passwordRePlaceHolder=\uC0C8\uB85C\uC6B4 \uBE44\uBC00\uBC88\uD638\uB97C \uC7AC\uC785\uB825\uD574\uC8FC\uC138\uC694.
+member.update.nation=\uAD6D\uAC00 \uBCC0\uACBD
+member.update.language=\uC5B8\uC5B4 \uBCC0\uACBD
+member.update.name=\uC774\uB984 \uBCC0\uACBD
+member.update.cellphone=\uBC88\uD638 \uBCC0\uACBD
+member.delete.self=\uD68C\uC6D0\uD0C8\uD1F4
+member.update.result=\uBCC0\uACBD
+memeber.update.reset=\uB2E4\uC2DC
