--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -46,3 +46,15 @@ site.favorite.favorite=\u6700\u7231
 site.store.storeRating=\u5496\u5561\u5E97\u8BC4\u8BBA
 site.product.productRating=\u4EA7\u54C1\u8BC4\u8BBA
 site.list.add=\u52A0
+member.update.passwordBefore=\u5728\u5BC6\u7801\u4E4B\u524D
+member.update.passwordBeforePlaceHolder=\u5728\u5BC6\u7801\u4E4B\u524D\u8F93\u5165
+member.update.password=\u66F4\u65B0\u5BC6\u7801
+member.update.passwordPlaceHolder=\u8F93\u5165\u66F4\u65B0\u5BC6\u7801
+member.update.passwordRePlaceHolder=\u91CD\u65B0\u786E\u8BA4\u66F4\u65B0\u5BC6\u7801
+member.update.nation=\u66F4\u65B0\u56FD\u5BB6
+member.update.language=\u66F4\u65B0\u8BED\u8A00
+member.update.name=\u66F4\u65B0\u540D\u79F0
+member.update.cellphone=\u66F4\u65B0\u624B\u673A
+member.delete.self=\u4F1A\u5458\u5206\u88C2
+member.update.result=\u66F4\u6539
+memeber.update.reset=\u91CD\u542F
