--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -10,6 +10,7 @@ site.list.toMain=Main
 site.list.storeList=Store List
 site.list.productSearch=product search
 site.list.search=search
+site.list.touristList=Tourist List
 site.main.title=GangNeung Coffee City
 site.main.subTitle=Start You're Coffee Life In GangNeung
 site.main.previous=Previous
