--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -10,6 +10,7 @@ site.list.toMain=\uBA54\uC778\uC73C\uB85C
 site.list.storeList=\uC2A4\uD1A0\uC5B4 \uBAA9\uB85D
 site.list.productSearch=\uC74C\uB8CC \uC774\uB984
 site.list.search=\uAC80\uC0C9
+site.list.touristList=\uAD00\uAD11\uC9C0 \uBAA9\uB85D
 site.main.title=\uAC15\uB989 \uCEE4\uD53C \uB3C4\uC2DC
 site.main.subTitle=\uB2F9\uC2E0 \uC0B6\uACFC \uAC19\uC740 \uAC15\uB989 \uCEE4\uD53C\uB3C4\uC2DC
 site.main.previous=\uC774\uC804
@@ -45,6 +46,7 @@ site.member.siteAdmin=\uC0AC\uC774\uD2B8 \uAD00\uB9AC
 site.favorite.favorite=\uC990\uACA8\uCC3E\uAE30
 site.store.storeRating=\uCEE4\uD53C\uC20D \uB9AC\uBDF0
 site.product.productRating=\uC81C\uD488 \uB9AC\uBDF0
+
 site.list.add=\uCD94\uAC00
 member.update.passwordBefore=\uAE30\uC874 \uBE44\uBC00\uBC88\uD638
 member.update.passwordBeforePlaceHolder=\uAE30\uC874 \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
