--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -10,6 +10,7 @@ site.list.toMain=\u56DE\u5230\u9876\u7AEF
 site.list.storeList=\u5546\u5E97\u5217\u8868
 site.list.productSearch=\u4EA7\u54C1\u641C\u7D22
 site.list.search=\u641C\u7D22
+site.list.touristList=\u65C5\u6E38\u540D\u5355
 site.main.title=\u6C5F\u9675\u5496\u5561
 site.main.subTitle=\u50CF\u4F60\u751F\u6D3B\u7684\u6C5F\u9675\u5496\u5561\u57CE
 site.main.previous=\u4E0A\u4E00\u4E2A
