--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -1,61 +1,61 @@
 site.title=GANGNEUNG COFFEE CITY
-site.language.korean=korean
-site.language.english=english
-site.language.chinese=chinese
-site.list.top=GangNeung Coffee
+site.language.korean=Korean
+site.language.english=English
+site.language.chinese=Chinese
+site.list.top=GangNeung Coffee Street
 site.list.loginJoin=Login/Join
 site.list.logout=Logout
-site.list.update=Edit Information
+site.list.update=Editing Information
 site.list.toMain=Main
 site.list.storeList=Store List
-site.list.productSearch=product search
-site.list.search=search
+site.list.productSearch=Drinks Name
+site.list.search=Search
 site.list.touristList=Tourist List
 site.main.title=GangNeung Coffee City
-site.main.subTitle=Start You're Coffee Life In GangNeung
+site.main.subTitle=GangNeung Coffee City like your Life
 site.main.previous=Previous
 site.main.next=Next
-site.main.imgTitle1=cool discreet beach
+site.main.imgTitle1=cool Anmok beach
 site.main.imgTitle2=A cup of warm coffee
 site.main.imgTitle3=For you
 site.main.imgTitle4=Gangneung Coffee
 site.main.imgSubTitle1=with good beans
-site.main.imgSubTitle2=Matching the Winter Olympics
+site.main.imgSubTitle2=which matches with the Winter Olympics
 site.main.imgSubTitle3=Different from the franchise
-site.main.imgSubTitle4=You can visit anywhere
-site.main.bestFriend=You're Best Friend
-site.storeList.title=Your Best Friend
-site.footer.teamName=Fresh Team
+site.main.imgSubTitle4=good to visit anywhere
+site.main.bestFriend=your best partner
+site.storeList.title=Coffee Shop for you
+site.footer.teamName=Refreshing
 site.member.login=Login
-site.member.email=email
-site.member.emailPlaceHolder=Enter the email
-site.member.password=password
-site.member.passwordPlaceHolder=Enter password
-site.member.join=Join
-site.member.repassword=Reconfirm password
-site.member.nation=Nation
+site.member.email=E-mail
+site.member.emailPlaceHolder=Please enter your E-mail
+site.member.password=Password
+site.member.passwordPlaceHolder=Please enter your password
+site.member.join=Sign Up
+site.member.repassword=Reconfirm your password
+site.member.nation=Country
 site.member.language=Language
 site.member.name=Name
-site.member.cellphone=CellPhone
+site.member.cellphone=Mobile phone
 site.member.gender=Gender
 site.member.man=Male
 site.member.woman=Female
-site.member.birthday=BirthDay
-site.member.profileimg=Profile Image
-site.member.siteAdmin=Site Administration
-site.favorite.favorite=Favorites
+site.member.birthday=Date of Birth
+site.member.profileimg=Profile Photo
+site.member.siteAdmin=Site Management
+site.favorite.favorite=Finding something to enjoy
 site.store.storeRating=Coffee Shop Reviews
 site.product.productRating=Product Reviews
 site.list.add=Add
-member.update.passwordBefore=Before PassWord
-member.update.passwordBeforePlaceHolder=Enter Before Password
-member.update.password=Update PassWord
-member.update.passwordPlaceHolder=Enter Update Password
-member.update.passwordRePlaceHolder=Reconfirm Update Password
-member.update.nation=Update Nation
-member.update.language=Update Language
-member.update.name=Update Name
-member.update.cellphone=Update Cellphone
-member.delete.self=Member Secession
-member.update.result=Change
+member.update.passwordBefore=Existing Password
+member.update.passwordBeforePlaceHolder=Enter Existnig Password
+member.update.password=Password to change
+member.update.passwordPlaceHolder=Enter New Password
+member.update.passwordRePlaceHolder=Reconfirm New Password
+member.update.nation=Updated Nation
+member.update.language=Updated Language
+member.update.name=Updated Name
+member.update.cellphone=Updated phone number
+member.delete.self=Member Secession 
+member.update.result=Change over
 memeber.update.reset=Reset
