--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/messages/message_zh.properties
@@ -1,4 +1,4 @@
-site.title=\u6C5F\u9675\u5496\u5561
+site.title=\u6C5F\u9675\u5496\u5561\u57CE
 site.language.korean=\u97E9\u8BED
 site.language.english=\u82F1\u8BED
 site.language.chinese=\u4E2D\u56FD\u8BED
@@ -11,27 +11,27 @@ site.list.storeList=\u5546\u5E97\u5217\u8868
 site.list.productSearch=\u4EA7\u54C1\u641C\u7D22
 site.list.search=\u641C\u7D22
 site.list.touristList=\u65C5\u6E38\u540D\u5355
-site.main.title=\u6C5F\u9675\u5496\u5561
-site.main.subTitle=\u50CF\u4F60\u751F\u6D3B\u7684\u6C5F\u9675\u5496\u5561\u57CE
+site.main.title=\u6C5F\u9675\u5496\u5561\u57CE
+site.main.subTitle=\u6C5F\u9675\u5496\u5561\u57CE\u4E0E\u4F60\u540C\u5728
 site.main.previous=\u4E0A\u4E00\u4E2A
 site.main.next=\u4E0B\u4E00\u6B65
-site.main.imgTitle1=\u9177\u8C28\u614E\u7684\u6D77\u6EE9
+site.main.imgTitle1=\u6E05\u51C9\u7684\u6D77\u6EE9
 site.main.imgTitle2=\u4E00\u676F\u6E29\u6696\u7684\u5496\u5561
 site.main.imgTitle3=\u4E3A\u4F60
 site.main.imgTitle4=\u6C5F\u9675\u5496\u5561
-site.main.imgSubTitle1=\u6709\u597D\u8C46\u5B50
+site.main.imgSubTitle1=\u4F18\u8D28\u7684\u5496\u5561\u8C46
 site.main.imgSubTitle2=\u5339\u914D\u51AC\u5B63\u5965\u8FD0
 site.main.imgSubTitle3=\u4E0D\u540C\u4E8E\u7279\u8BB8\u7ECF\u8425
-site.main.imgSubTitle4=\u4F60\u53EF\u4EE5\u5230\u4EFB\u4F55\u5730\u65B9\u8BBF\u95EE
-site.main.bestFriend=\u4F60\u662F\u6700\u597D\u7684\u670B\u53CB
-site.storeList.title=\u5496\u5561\u5E97\u7ED9\u4F60
-site.footer.teamName=\u6E05\u723D\u56E2\u961F
+site.main.imgSubTitle4=\u4F60\u53EF\u4EE5\u53BB\u4EFB\u4F55\u5730\u65B9
+site.main.bestFriend=\u4F60\u6700\u597D\u7684\u670B\u53CB
+site.storeList.title=\u4E3A\u4F60\u800C\u51C6\u5907\u7684\u5496\u5561\u5E97
+site.footer.teamName=\u5C0F\u6E05\u65B0\u56E2\u961F
 site.member.login=\u767B\u5F55
 site.member.email=\u7535\u90AE
 site.member.emailPlaceHolder=\u8F93\u5165\u7535\u90AE
 site.member.password=\u5BC6\u7801
 site.member.passwordPlaceHolder=\u8F93\u5165\u5BC6\u7801
-site.member.join=\u62A5\u540D
+site.member.join=\u52A0\u5165\u4F1A\u5458
 site.member.repassword=\u91CD\u65B0\u786E\u8BA4\u5BC6\u7801
 site.member.nation=\u56FD\u5BB6
 site.member.language=\u8BED\u8A00
@@ -39,23 +39,23 @@ site.member.name=\u540D\u79F0
 site.member.cellphone=\u624B\u673A
 site.member.gender=\u6027\u522B
 site.member.man=\u7537
-site.member.Woman=\uF981
+site.member.woman=\uF981
 site.member.birthday=\u751F\u65E5
-site.member.profileimg=\u6863\u6848\u56FE\u50CF
+site.member.profileimg=\u5934\u50CF
 site.member.siteAdmin=\u7F51\u7AD9\u7BA1\u7406
 site.favorite.favorite=\u6700\u7231
 site.store.storeRating=\u5496\u5561\u5E97\u8BC4\u8BBA
 site.product.productRating=\u4EA7\u54C1\u8BC4\u8BBA
-site.list.add=\u52A0
-member.update.passwordBefore=\u5728\u5BC6\u7801\u4E4B\u524D
-member.update.passwordBeforePlaceHolder=\u5728\u5BC6\u7801\u4E4B\u524D\u8F93\u5165
-member.update.password=\u66F4\u65B0\u5BC6\u7801
-member.update.passwordPlaceHolder=\u8F93\u5165\u66F4\u65B0\u5BC6\u7801
-member.update.passwordRePlaceHolder=\u91CD\u65B0\u786E\u8BA4\u66F4\u65B0\u5BC6\u7801
-member.update.nation=\u66F4\u65B0\u56FD\u5BB6
-member.update.language=\u66F4\u65B0\u8BED\u8A00
-member.update.name=\u66F4\u65B0\u540D\u79F0
-member.update.cellphone=\u66F4\u65B0\u624B\u673A
-member.delete.self=\u4F1A\u5458\u5206\u88C2
+site.list.add=\u589E\u52A0
+member.update.passwordBefore=\u73B0\u6709\u5BC6\u7801
+member.update.passwordBeforePlaceHolder=\u8F93\u5165\u73B0\u6709\u5BC6\u7801
+member.update.password=\u65B0\u5BC6\u7801
+member.update.passwordPlaceHolder=\u786E\u8BA4\u65B0\u5BC6\u7801
+member.update.passwordRePlaceHolder=\u91CD\u65B0\u786E\u8BA4\u65B0\u5BC6\u7801
+member.update.nation=\u53D8\u66F4\u56FD\u5BB6
+member.update.language=\u5207\u6362\u8BED\u8A00
+member.update.name=\u6539\u53D8\u7528\u6237\u540D
+member.update.cellphone=\u66FF\u6362\u624B\u673A\u53F7\u7801
+member.delete.self=\u9000\u51FA\u4F1A\u5458
 member.update.result=\u66F4\u6539
-memeber.update.reset=\u91CD\u542F
+memeber.update.reset=\u91CD\u8BD5
